--- a/docs/1.md
+++ b/docs/1.md
@@ -4,6 +4,7 @@ hide:
 ---
 # Neutron Stars
 
+
 <figure>
     <img style="width:100%" src="https://live.staticflickr.com/5555/14773475650_72d11fd8dc_b.jpg"/></img>
     <figcaption align = "left">
@@ -56,6 +57,6 @@ But what is this principle?
 - <https://wwwmpa.mpa-garching.mpg.de/mpa/institute/news_archives/news1109_janka/news1109_janka-en-print.html>
 
 ### Images
-[1] Kevin Gill, https://www.flickr.com/photos/kevinmgill/14773475650
-[2] NASA, https://images.nasa.gov/details-PIA17563
-[3] Event Horizon Telescope Collaboration, https://eventhorizontelescope.org/blog/astronomers-reveal-first-image-black-hole-heart-our-galaxy
+[1] Kevin Gill, <https://www.flickr.com/photos/kevinmgill/14773475650>
+<br/> [2] NASA, <https://images.nasa.gov/details-PIA17563>
+<br/> [3] Event Horizon Telescope Collaboration, <https://eventhorizontelescope.org/blog/astronomers-reveal-first-image-black-hole-heart-our-galaxy>
