--- a/docs/2.md
+++ b/docs/2.md
@@ -30,10 +30,10 @@ We can see, then, that if high compression necessitates low position uncertainty
 
 ### References
 - A. G. Truscott, K. E. Strecker, W. I. McAlexander, G. Partridge, R. G. Hulet, "Observation of Fermi Pressure in a Gas of Trapped Atoms", _Science_, March 2001
-- https://apod.nasa.gov/apod/ap100228.html
-- Wolfgang Pauli's Nobel Lecture: https://www.nobelprize.org/prizes/physics/1945/pauli/lecture/
-- W. Heisenberg, THE ACTUAL CONTENT OF QUANTUM THEORETICAL KINEMATICS AND MECHANICS, NASA Technical Memorandum, December 1983, https://ntrs.nasa.gov/api/citations/19840008978/downloads/19840008978.pdf
+- <https://apod.nasa.gov/apod/ap100228.html>
+- Wolfgang Pauli's Nobel Lecture: <https://www.nobelprize.org/prizes/physics/1945/pauli/lecture>
+- W. Heisenberg, THE ACTUAL CONTENT OF QUANTUM THEORETICAL KINEMATICS AND MECHANICS, NASA Technical Memorandum, December 1983, <https://ntrs.nasa.gov/api/citations/19840008978/downloads/19840008978.pdf>
 
 
 ### Images
-[1] Atomic Archive: https://www.atomicarchive.com/resources/biographies/heisenberg.html
+[1] Atomic Archive: <https://www.atomicarchive.com/resources/biographies/heisenberg.html>
