--- a/docs/5.md
+++ b/docs/5.md
@@ -26,17 +26,12 @@ The first is referred to as a quark-gluon plasma. In this plasma, free quarks sw
 There is another form of "stable" quark matter, and here, things get a bit stranger.
 
 
-References:
-
-J. Letessier, J. Rafelski, _Hadrons and quark-gluon plasma_, Cambridge, Cambridge University Press, 2002.
-
-D. Blaschke, A. Sedrakian, N. K. Glendenning, _Physics of neutron star interiors_, Lecture Notes in Physics. Vol. 578. Springer-Verlag, 2002. doi: [10.1007/3-540-44578-1](https://doi.org/10.1007%2F3-540-44578-1)
-
-CERN: https://home.web.cern.ch/science/physics/standard-model
+### References
+- J. Letessier, J. Rafelski, _Hadrons and quark-gluon plasma_, Cambridge, Cambridge University Press, 2002.
+- D. Blaschke, A. Sedrakian, N. K. Glendenning, _Physics of neutron star interiors_, Lecture Notes in Physics. Vol. 578. Springer-Verlag, 2002. doi: [10.1007/3-540-44578-1](https://doi.org/10.1007%2F3-540-44578-1)
+- CERN: <https://home.web.cern.ch/science/physics/standard-model>
 
 
 Images:
-
-\[1\] https://static.wikia.nocookie.net/beyond-universe/images/e/e6/Qunium_Star.jpg/revision/latest?cb=20210719050635
-
-\[2\] Wikipedia Commons, https://commons.wikimedia.org/wiki/File:Neutron_quark_structure.svg
+[1] <https://static.wikia.nocookie.net/beyond-universe/images/e/e6/Qunium_Star.jpg/revision/latest?cb=20210719050635>
+<br>[2] Wikipedia Commons, <https://commons.wikimedia.org/wiki/File:Neutron_quark_structure.svg>
