--- a/docs/6.md
+++ b/docs/6.md
@@ -26,15 +26,11 @@ So when we say that strange matter is more stable than ordinary matter, what do 
 If we follow this line of reasoning, all ordinary matter should slowly decay into strange matter, with each medium-size strangelet produced resulting in an ever-expanding strange star consuming everything in its vicinity, releasing tremendous amounts of energy in the process. However, for a nucleus to form a stable stranglet, many down quarks would have to near-simultaneously transmute into strange quarks, so even if this hypothesis is true, we likely do not have to worry about cosmic armageddon. Still, the possibility of strange matter is something that scientists are still actively looking into.
 
 
-References:
-
-E. Witten, "Cosmic separation of phases", _Phys. Rev. D._, vol. 30 272, 15 July 1984, doi: https://doi.org/10.1103/PhysRevD.30.272
-
-A. Charles, F. Edward, O. Angela, "Strange Stars", _Astrophysical Journal_, vol. 310 p.261-272, November 1986, doi: [10.1086/164679](https://ui.adsabs.harvard.edu/abs/1986ApJ...310..261A)
-
-T. Klähn, D. Blaschke, "Strange Matter in Compact Stars", _EPJ Web Conf._, vol. 171, 08001, February 2018
+### References
+- E. Witten, "Cosmic separation of phases", _Phys. Rev. D._, vol. 30 272, 15 July 1984, doi: <https://doi.org/10.1103/PhysRevD.30.272>
+- A. Charles, F. Edward, O. Angela, "Strange Stars", _Astrophysical Journal_, vol. 310 p.261-272, November 1986, doi: [10.1086/164679](https://ui.adsabs.harvard.edu/abs/1986ApJ...310..261A)
+- T. Klähn, D. Blaschke, "Strange Matter in Compact Stars", _EPJ Web Conf._, vol. 171, 08001, February 2018
 
 
-Images:
-
-Kurzgesagt - In a Nutshell "The Most Dangerous Stuff in the Universe - Strange Stars Explained"
+### Images
+[Kurzgesagt - In a Nutshell "The Most Dangerous Stuff in the Universe - Strange Stars Explained"](https://www.youtube.com/watch?v=p_8yK2kmxoo)
