Forgor one part

--- a/docs/3.md
+++ b/docs/3.md
@@ -6,7 +6,7 @@ hide:
 As you may have guessed, neutron stars are made primarily out of neutrons. If you need a refresher, neutrons, along with protons, are what make up the nuclei of atoms ("nuclei" are the hard centres of atoms, surrounded by fuzzy layers of electrons). But all these neutrons have to come from somewhere, and in neutron stars, that turns out to be from the combining of protons and electrons.
 
 <figure>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Helium_atom_QM.svg/598px-Helium_atom_QM.svg.png?20201020092751"/>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Helium_atom_QM.svg/598px-Helium_atom_QM.svg.png?20201020092751" style="background-color: white" />
     <figcaption align = "left">
     <small>A depiction of a helium atom. The neutrons are represented in purple, and protons in red, and together make up the central pink dot. The dark cloud surrounding the central dot represents the electron cloud of the atom.</small>
     </figcaption>
