--- a/docs/4.md
+++ b/docs/4.md
@@ -3,7 +3,7 @@ hide:
 - toc
 ---
 
-<center><video style="position: relative; z-index: 1; height: 70vh; aspect-ratio: 16 / 9;" autoplay>
+<center><video style="position: relative; z-index: 1; height: 70vh; aspect-ratio: 16 / 9;" autoplay controls>
     <source src="../assets/Part2.mp4" type="video/mp4">
 </video></center>
 <h1 style="font-size:0"></h1>
